[refactor]  Lucene Query Rewriting and Configuration
- Simplified query rewriting logic in `AnalyzingQueryRewriter` by extracting methods for term, prefix, and wildcard queries.
- Enhanced `LuceneConfig` to improve fallback index configuration retrieval and added nullability annotations for better clarity.
- Updated `LuceneIndex` to ensure consistent handling of commit requirements.
- Improved error handling in vector embedding functions and added tests for whitespace-only model inputs.
- Enhanced vector configuration parsing and validation, ensuring robust handling of model attributes and dimensions.
- Added new integration tests for vector embedding and search functionalities, ensuring comprehensive coverage of edge cases.